# Documentation

./: README.md
Automatisation/: README.md
Automatisation/Ansible/: README.MD  architecture.md  command.md
Automatisation/Terraform/: README.MD
Conteneurisation/: README.md
Conteneurisation/Docker/: README.md
Conteneurisation/Kubernetes/: README.md
Git/: README.md  arborescence.md  arborescence_GIT.md  basic.md  common.md  damage-controle.md  fix.md  init.md
IDE/: vscode.md
Langage/: README.md
Langage/Design Pattern/: README.md
Langage/Framework/: README.md
Langage/Markdown/: README.md  syntaxe.md
Langage/Python/: ## Allocation mémoire Python.md  ## Fonctions supplémentaires.md  ## Les erreurs de Python.md  ## List des modules.md  ## Liste des mots réservés.md  ## Liste des méthodes de chaînes de caractères.md  .gitignore  00 Les types natifs.md  01 Les variables.md  02 Le type des objets et la conversion.md  03 Interagir avec l'utilisateur.md  04 Les opérateurs.md  05 Le formatage des chaînes de caractères.md  06 Les structures conditionelles.md  07 Les listes.md  08 Les boucles.md  09 Les fichiers.md  10 Les dictionnaires.md  11 Les exeptions et la programmation LBYL et EAFP.md  README.md  (+7 more)
Langage/Python/Project/15-LeConvertisseurDeDevises/: cds.css  pyproject.toml
Langage/Python/Project/16 Le ciné club/: pyproject.toml
Langage/Python/Project/16 Le ciné club/app/: movie.py
Langage/Python/Project/20-TableauDeBordDjango/: pyproject.toml
Langage/Python/Project/21-GestionnaireUtilisateursV3/: pyproject.toml
Langage/Python/Project/21-GestionnaireUtilisateursV3/webapp/api/: db.json
Langage/Python/Project/21-GestionnaireUtilisateursV3/webapp/contacts/: views.py
Langage/Python/Project/21-GestionnaireUtilisateursV3/webapp/contacts/static/css/: style.css
Langage/Python/Project/21-GestionnaireUtilisateursV3/webapp/contacts/templates/contacts/: index.html
Langage/Python/Project/21-GestionnaireUtilisateursV3/webapp/webapp/: settings.py  urls.py
Langage/Python/Project/23-BotDiscord/: README.md  pyproject.toml
Langage/Python/Project/23-BotDiscord/shrine/: ShrineBot.py  main.py
Langage/Python/Project/23-BotDiscord/shrine/utils/: env.py
Langage/Python/Project/24-TraitementImagePython/: 01-CréerOuvrirAfficherUneImage.py  pyproject.toml
OS/: README.md
Reseau/: README.md  ssh.md
Securité/: ssh.md
(+93 files in other folders)
