[tool.poetry]
name = "GestionnaireUtilisateursV3"
version = "0.1.0"
description = ""
authors = ["domino659 <martin@sionfamily.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
django = "*"
tinydb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
